[gd_scene load_steps=10 format=3 uid="uid://oltvrf01xrxl"]

[ext_resource type="Texture2D" uid="uid://c2h5snkvemm4p" path="res://visual/icons/Minus.svg" id="1_8ggy2"]
[ext_resource type="Script" path="res://src/ui_parts/zoom_menu.gd" id="1_18ab8"]
[ext_resource type="Texture2D" uid="uid://eif2ioi0mw17" path="res://visual/icons/Plus.svg" id="2_284x5"]

[sub_resource type="InputEventAction" id="InputEventAction_mnex0"]
action = &"zoom_out"

[sub_resource type="Shortcut" id="Shortcut_ntgv0"]
events = [SubResource("InputEventAction_mnex0")]

[sub_resource type="InputEventAction" id="InputEventAction_20462"]
action = &"zoom_reset"

[sub_resource type="Shortcut" id="Shortcut_4v7wx"]
events = [SubResource("InputEventAction_20462")]

[sub_resource type="InputEventAction" id="InputEventAction_kt076"]
action = &"zoom_in"

[sub_resource type="Shortcut" id="Shortcut_y6ouu"]
events = [SubResource("InputEventAction_kt076")]

[node name="ZoomMenu" type="HBoxContainer"]
offset_right = 114.0
offset_bottom = 24.0
alignment = 1
script = ExtResource("1_18ab8")

[node name="ZoomOut" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Zoom Out"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
shortcut = SubResource("Shortcut_ntgv0")
shortcut_in_tooltip = false
icon = ExtResource("1_8ggy2")
icon_alignment = 1

[node name="ZoomReset" type="Button" parent="."]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
tooltip_text = "Zoom Reset"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 13
shortcut = SubResource("Shortcut_4v7wx")
shortcut_in_tooltip = false
text = "100%"

[node name="ZoomIn" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Zoom In"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
shortcut = SubResource("Shortcut_y6ouu")
shortcut_in_tooltip = false
icon = ExtResource("2_284x5")
icon_alignment = 1

[connection signal="pressed" from="ZoomOut" to="." method="zoom_out"]
[connection signal="pressed" from="ZoomReset" to="." method="zoom_reset"]
[connection signal="pressed" from="ZoomIn" to="." method="zoom_in"]
